changed background color class

--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
 		</header>
 
 		<main class="container center-items">
-			<section>🚧 Under Construction! 🚧</section>
+			<section class="color-1">🚧 Under Construction! 🚧</section>
 		</main>
 	</body>
 </html>
