Updated landing page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,22 @@
 			</nav>
 		</header>
 
-		<main class="container center-items">
-			<section>🚧 Under Construction! 🚧</section>
+		<main class="">
+			<section class="section">
+				<div class="landing landing-image">
+					<div class="landing-text-container">
+						<div class="landing-text">
+							2024 IT Capstone Group 6 <br />
+							Spectrum Plays
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="color-1 section">
+				<div class="container">
+					<section class="color-1">🚧 Under Construction! 🚧</section>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
