--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
 			</nav>
 		</header>
 
-		<main class="container center-items">
+		<main class="container">
 			<section class="color-1">🚧 Under Construction! 🚧</section>
 		</main>
 	</body>
