Changed landing text

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 				<div class="landing landing-image">
 					<div class="landing-text-container">
 						<div class="landing-text">
-							2024 IT Capstone Group 6 <br />
-							Spectrum Plays
+							2024 IT Capstone <br />
+							Group 6 - Spectrum Plays
 						</div>
 					</div>
 				</div>
