Updated nav bar and landing page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	</head>
 	<body class="body">
 		<header class="header">
-			<h1 class="heading">IT Capstone Group 6</h1>
+			<div class="header-spacer"></div>
+			<h1 class="heading">IT4983-01/W02 Capstone</h1>
 			<nav class="nav">
 				<a href="/" class="nav-button">Home</a>
 				<a href="/aboutus.html" class="nav-button">About Us</a>
@@ -21,8 +22,9 @@
 				<div class="landing landing-image">
 					<div class="landing-text-container">
 						<div class="landing-text">
-							2024 IT Capstone <br />
-							Group 6 - Spectrum Plays
+							<span></span>
+							<span class="big-text">Group 6 - Spectrum Plays</span>
+							<span class="bottom-text">Spring 2024</span>
 						</div>
 					</div>
 				</div>
