--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,8 @@
 	</head>
 	<body class="body">
 		<header class="header">
-			<h1 class="heading">IT Capstone Group 6</h1>
+			<div class="header-spacer"></div>
+			<h1 class="heading">IT4983-01/W02 Capstone</h1>
 			<nav class="nav">
 				<a href="/" class="nav-button">Home</a>
 				<a href="/aboutus.html" class="nav-button">About Us</a>
