Added js to enable animation after image is loaded

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>IT Capstone Group 6</title>
 		<link rel="stylesheet" href="styles/styles.css" />
 		<link rel="stylesheet" href="styles/index.css" />
+		<script src="script.js" defer></script>
 	</head>
 	<body class="body">
 		<header class="header">
