Moved fade-in from script to index

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<section class="section">
 				<div class="landing landing-image">
 					<div class="landing-text-container">
-						<div class="landing-text">
+						<div class="landing-text fade-in">
 							<span></span>
 							<span class="big-text">Group 6 - Spectrum Plays</span>
 							<span class="bottom-text">Spring 2024</span>
