--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -11,8 +11,9 @@
 			<div class="header-spacer"></div>
 			<h1 class="heading">IT4983-01/W02 Capstone</h1>
 			<nav class="nav">
-				<a href="/" class="nav-button">Home</a>
-				<a href="/aboutus.html" class="nav-button">About Us</a>
+				<a href="/" class="button">Home</a>
+				<a href="/pages/aboutus.html" class="button">About Us</a>
+				<a href="/#milestone" class="button">Milestones</a>
 			</nav>
 		</header>
 
