Add milestone one page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 			<div class="header-spacer"></div>
 			<h1 class="heading">IT4983-01/W02 Capstone</h1>
 			<nav class="nav">
-				<a href="/" class="nav-button">Home</a>
-				<a href="/aboutus.html" class="nav-button">About Us</a>
+				<a href="/" class="button">Home</a>
+				<a href="/pages/aboutus.html" class="button">About Us</a>
+				<a href="/#milestone" class="button">Milestones</a>
 			</nav>
 		</header>
 
@@ -24,7 +25,7 @@
 					<div class="landing-text-container">
 						<div class="landing-text fade-in">
 							<span></span>
-							<span class="big-text">Group 6 - Spectrum Plays</span>
+							<span class="big-text">Group 15 - Spectrum Plays</span>
 							<span class="bottom-text">Spring 2024</span>
 						</div>
 					</div>
@@ -32,7 +33,46 @@
 			</section>
 			<section class="color-1 section">
 				<div class="container">
-					<section class="color-1">🚧 Under Construction! 🚧</section>
+					<section class="color-1">
+						<h3 class="big-text forward">Project Overview:</h3>
+						<div class="project-overview-container">
+							<div class="overview-text">
+								<p>
+									For the Kennesaw Spring 2024 IT Capstone, our team was tasked
+									to build a web app for Spectrum Plays. A revolutionary new way
+									to teach sheet music to children grades K-5.
+								</p>
+								<p>
+									Using color notation to show the learner what notes represent
+									what key, we can break through the wall that most children run
+									into when learning something as complicated as sheet music.
+								</p>
+								<p>
+									We used industry standard technologies like React, C#, and
+									Typescript to build this web application with the ideas of
+									scalability, compatibility, and extensibility.
+								</p>
+							</div>
+							<img
+								src="/imgs/landing.jpg"
+								alt="Image of the Spectrum Plays App" />
+						</div>
+					</section>
+				</div>
+			</section>
+
+			<section id="milestone" class="color-2 section">
+				<div class="container">
+					<h3 class="big-text">Milestone Progress:</h3>
+					<div class="milestone-container">
+						<div>
+							<div class="embed">PLEASE EMBED VIDEO HERE</div>
+						</div>
+						<div class="download-container">
+							<span class="download-title">Download Links:</span>
+							<button class="download button">Milestone One</button>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
