Moved aboutus.html to aboutus folder and renamed to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h1 class="heading">IT4983-01/W02 Capstone</h1>
 			<nav class="nav">
 				<a href="/" class="button">Home</a>
-				<a href="/pages/aboutus.html" class="button">About Us</a>
+				<a href="/aboutus/" class="button">About Us</a>
 				<a href="/#milestone" class="button">Milestones</a>
 			</nav>
 		</header>
