Build aboutus page

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>IT Capstone Group 6</title>
 		<link rel="stylesheet" href="/styles/styles.css" />
+		<link rel="stylesheet" href="aboutus.css" />
 	</head>
 	<body class="body">
 		<header class="header">
@@ -18,7 +19,106 @@
 		</header>
 
 		<main class="container">
-			<section class="color-1">🚧 Under Construction! 🚧</section>
+			<section class="color-1">
+				<h3 class="title-text">About the Team:</h3>
+
+				<div class="role-cards">
+					<div class="role-container">
+						<h4 class="role">Team Lead: Alisa Harrell</h4>
+
+						<div class="text-image-container">
+							<img
+								class="headshot"
+								src="/imgs/piano-med.jpg"
+								alt="Headshot of Alisa Harrell" />
+							<p class="description">
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Cupiditate molestiae quasi amet, hic in nemo explicabo sequi rem
+								commodi atque pariatur, temporibus sint! Sunt aliquam mollitia
+								error reprehenderit minus explicabo.
+							</p>
+						</div>
+					</div>
+
+					<div class="role-container">
+						<h4 class="role">Researcher: Dharani Baradi</h4>
+
+						<div class="text-image-container">
+							<img
+								class="headshot"
+								src="/imgs/piano-med.jpg"
+								alt="Headshot of Dharani Baradi" />
+							<p class="description">
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Cupiditate molestiae quasi amet, hic in nemo explicabo sequi rem
+								commodi atque pariatur, temporibus sint! Sunt aliquam mollitia
+								error reprehenderit minus explicabo.
+							</p>
+						</div>
+					</div>
+
+					<div class="role-container">
+						<h4 class="role">Researcher and Developer: Patrick Mahon</h4>
+
+						<div class="text-image-container">
+							<img
+								class="headshot"
+								src="imgs/patrick.jpeg"
+								alt="Headshot of Patrick Mahon" />
+							<p class="description">
+								Patrick Mahon is a senior Computer Science major at Kennesaw
+								State University. He started his programming journey learning C#
+								and has since worked with Java and Python. His role on this
+								project is primarily focused on backend development as well as
+								assisting with documentation.
+							</p>
+						</div>
+					</div>
+
+					<div class="role-container">
+						<h4 class="role">Backend Developer: Rusty Hodge</h4>
+
+						<div class="text-image-container">
+							<img
+								class="headshot"
+								src="/imgs/piano-med.jpg"
+								alt="Headshot of Rusty Hodge" />
+							<p class="description">
+								Rusty J. Hodge is a full-stack engineer and a student at
+								Kennesaw State University, set to graduate in 2024. With
+								multiple years of experience as a software engineer, Rusty has
+								honed his skills in C#, seeing multiple projects to delivery.
+								His role within the team involves architecting server-side
+								logic, unifying design and development of the entities between
+								client and server, and maintaining Scrum principles and
+								practices. Rusty's commitment to continuous learning and
+								excellence in software development has made them a valuable
+								asset to the team, and he hopes to further develop his abilities
+								throughout the project and in his professional career.
+							</p>
+						</div>
+					</div>
+
+					<div class="role-container">
+						<h4 class="role">Frontend Developer: Wyatt Haston</h4>
+
+						<div class="text-image-container">
+							<img
+								class="headshot"
+								src="imgs/wyatt.jpeg"
+								alt="Headshot of Wyatt Haston" />
+							<p class="description">
+								Wyatt is a senior in Information Technology at Kennesaw State
+								University. He is set to graduate in the Spring of 2024. Wyatt
+								began frontend coding in 2021. Starting with Javascript, he
+								later moved to frontend frameworks like React. Now he learned
+								backend programming to become a full-stack developer. On the
+								team he is responsible for the React and Typescript frontend.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
