--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
 					<h3 class="big-text">Milestone Progress:</h3>
 					<div class="milestone-container">
 						<div>
-							<div class="embed">PLEASE EMBED VIDEO HERE</div>
+							<iframe
+								class="embed"
+								src="https://www.youtube.com/watch?v=rbINuRxOAAQ">
+							</iframe>
 						</div>
 						<div class="download-container">
 							<span class="download-title">Download Links:</span>
