--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>IT Capstone Group 6</title>
+
+		<title>About the Team</title>
+
 		<link rel="stylesheet" href="/styles/styles.css" />
 		<link rel="stylesheet" href="aboutus.css" />
 	</head>
