--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div>
 							<iframe
 								class="embed"
-								src="https://www.youtube.com/watch?v=rbINuRxOAAQ">
+								src="https://www.youtube.com/embed/rbINuRxOAAQ">
 							</iframe>
 						</div>
 						<div class="download-container">
