--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 							<iframe
 								class="embed"
-								src="https://www.youtube.com/watch?v=rbINuRxOAAQ">
+								src="https://www.youtube.com/embed/rbINuRxOAAQ">
 							</iframe>
 
 						</div>
