Add dharani headshot and description

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -48,13 +48,17 @@
 						<div class="text-image-container">
 							<img
 								class="headshot"
-								src="/imgs/piano-med.jpg"
+								src="imgs/dbaradi.png"
 								alt="Headshot of Dharani Baradi" />
 							<p class="description">
-								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-								Cupiditate molestiae quasi amet, hic in nemo explicabo sequi rem
-								commodi atque pariatur, temporibus sint! Sunt aliquam mollitia
-								error reprehenderit minus explicabo.
+								Dharani Baradi, a senior in Information Technology at Kennesaw
+								State University, anticipates graduation in May 2024. Having
+								initially embarked on her career as a Test Engineer, Dharani
+								developed a comprehensive understanding of testing methodologies
+								and quality assurance practices. In her current role within the
+								team, she assumes the responsibility for Research and Quality
+								Assurance, showcasing her proficiency in ensuring the highest
+								standards of excellence in project deliverables.
 							</p>
 						</div>
 					</div>
