Add download link

--- a/index.html
+++ b/index.html
@@ -66,16 +66,19 @@
 					<h3 class="big-text">Milestone Progress:</h3>
 					<div class="milestone-container">
 						<div>
-
 							<iframe
 								class="embed"
 								src="https://www.youtube.com/embed/rbINuRxOAAQ">
 							</iframe>
-
 						</div>
 						<div class="download-container">
 							<span class="download-title">Download Links:</span>
-							<button class="download button">Milestone One</button>
+							<a
+								href="https://drive.google.com/uc?export=download&id=19UKQFrvncfl0qvkw_7bPapGw_ztRVRr9"
+								target="_blank"
+								class="download button"
+								>Milestone One</a
+							>
 						</div>
 					</div>
 				</div>
