Add Rusty image

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -87,7 +87,7 @@
 						<div class="text-image-container">
 							<img
 								class="headshot"
-								src="/imgs/piano-med.jpg"
+								src="imgs/rusty.png"
 								alt="Headshot of Rusty Hodge" />
 							<p class="description">
 								Rusty J. Hodge is a full-stack engineer and a student at
