Added Alisa's bio

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -34,10 +34,12 @@
 								src="/imgs/piano-med.jpg"
 								alt="Headshot of Alisa Harrell" />
 							<p class="description">
-								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-								Cupiditate molestiae quasi amet, hic in nemo explicabo sequi rem
-								commodi atque pariatur, temporibus sint! Sunt aliquam mollitia
-								error reprehenderit minus explicabo.
+								Alisa Harrell is a dedicated student majoring in Information
+								Technology at Kennesaw State University. With a passion for
+								computers, she is hoping to further her IT carrier after
+								graduation in May 2024. Her role for this project as team lead
+								is to serve as a liaison between the members and sponsors. She
+								also oversees project progress to ensure it stays on track.
 							</p>
 						</div>
 					</div>
